# try-aider

./: .env  .secrets.baseline  README.md  app.ipynb  pyproject.toml
scripts/: run_notebook.py
