[tool.poetry]
name = "arallon-ai"
version = "0.1.0"
description = ""
authors = ["Nehil Jain <2761999+nehiljain@users.noreply.github.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "3.11.9"
aider-chat = "*"
pydantic = "*"
openai = "*"
instructor = "*"

[tool.poetry.scripts]
run-notebook = "jupyter nbconvert --to notebook --execute app.ipynb --inplace"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
