[tool.poetry]
name = "arallon-ai"
version = "0.1.0"
description = ""
authors = ["Nehil Jain <2761999+nehiljain@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
aider-chat = "*"
pydantic = "*"
openai = "*"
instructor = "*"

[tool.poetry.scripts]
run-notebook = "scripts.run_notebook:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
