[tool.poetry]
name = "arallon-ai"
version = "0.1.0"
description = ""
authors = ["Nehil Jain <2761999+nehiljain@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
jupyter = "^1.0.0"
python = "3.11.9"
aider-chat = "*"
pydantic = "*"
openai = "*"
instructor = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
